--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
 		<title>Document</title>
 	</head>
 	<body>
-
+		<header>
+			<div class="wrapper">
+				<div id="logo">
+					<a href="#">Foodieland</a>
+				</div>
+				<nav class="d-none d-md-block">
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Recipes</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">About us</a></li>
+					</ul>
+				</nav>
+				<div>
+					<i class="fa-solid fa-bars"></i>
+				</div>
+				<div id="header-links" class="d-none d-md-flex">
+					<a href=""><i class="fa-brands fa-facebook-f"></i></a>
+					<a href=""><i class="fa-brands fa-twitter"></i></a>
+					<a href=""><i class="fa-brands fa-instagram"></i></a>
+				</div>
+			</div>
+		</header>
 	</body>
 </html>
