--- a/index.html
+++ b/index.html
@@ -44,5 +44,359 @@
 				</div>
 			</div>
 		</header>
+		<main>
+			<div class="wrapper">
+				<div id="categories">
+					<div id="category-header">
+						<h3>Categories</h3>
+						<button>View all categories</button>
+					</div>
+					<div id="category-cards">
+						<div class="card" id="black-card">
+							<div class="card-img">
+								<img
+									src="./imgs/category1.png"
+									alt="Breakfast"
+								/>
+								<img
+									src="./imgs/category1.png"
+									class="opacity-20"
+									alt="Breakfast"
+								/>
+							</div>
+							<div class="card-name">
+								<h5>Breakfast</h5>
+							</div>
+						</div>
+						<div class="card" id="green-card">
+							<div class="card-img">
+								<img src="./imgs/category2.png" alt="Vegan" />
+								<img
+									src="./imgs/category2.png"
+									class="opacity-20"
+									alt="Breakfast"
+								/>
+							</div>
+							<div class="card-name">
+								<h5>Vegan</h5>
+							</div>
+						</div>
+						<div class="card" id="red-card">
+							<div class="card-img">
+								<img src="./imgs/category3.png" alt="Meat" />
+								<img
+									src="./imgs/category3.png"
+									class="opacity-20"
+									alt="Breakfast"
+								/>
+							</div>
+							<div class="card-name">
+								<h5>Meat</h5>
+							</div>
+						</div>
+						<div class="card" id="yellow-card">
+							<div class="card-img">
+								<img src="./imgs/category4.png" alt="Dessert" />
+								<img
+									src="./imgs/category4.png"
+									class="opacity-20"
+									alt="Breakfast"
+								/>
+							</div>
+							<div class="card-name">
+								<h5>Dessert</h5>
+							</div>
+						</div>
+						<div class="card" id="gray-card">
+							<div class="card-img">
+								<img src="./imgs/category5.png" alt="Lunch" />
+								<img
+									src="./imgs/category5.png"
+									class="opacity-20"
+									alt="Breakfast"
+								/>
+							</div>
+							<div class="card-name">
+								<h5>Lunch</h5>
+							</div>
+						</div>
+						<div class="card" id="gray2-card">
+							<div class="card-img">
+								<img
+									src="./imgs/category6.png"
+									alt="Chocolate"
+								/>
+								<img
+									src="./imgs/category6.png"
+									class="opacity-20"
+									alt="Breakfast"
+								/>
+							</div>
+							<div class="card-name">
+								<h5>Chocolate</h5>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div id="recipes">
+					<div id="recipes-header">
+						<h3>Simple and tasty recipes</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetuipisicing
+							elit, sed do eiusmod tempor incididunt ut <br />
+							labore et dolore magna aliqut enim ad minim
+						</p>
+					</div>
+					<div id="recipe-cards">
+						<div class="card">
+							<div class="card-img">
+								<img
+									src="./imgs/recipe1.png"
+									alt="Big and Juicy Wagyu Beef Cheeseburger"
+								/>
+								<div class="card-heart">
+									<i class="fa-solid fa-heart"></i>
+								</div>
+							</div>
+							<div class="card-content">
+								<h5>Big and Juicy Wagyu Beef Cheeseburger</h5>
+							</div>
+							<div class="card-details">
+								<div class="card-detail">
+									<i class="fa-solid fa-clock"></i>
+									<span>30 minutes</span>
+								</div>
+								<div class="card-detail">
+									<i class="fa-solid fa-utensils"></i>
+									<span>Snack</span>
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-img">
+								<img
+									src="./imgs/recipe2.png"
+									alt="Fresh Lime Roasted Salmon with Ginger Sauce"
+								/>
+								<div class="card-heart">
+									<i class="fa-solid fa-heart"></i>
+								</div>
+							</div>
+							<div class="card-content">
+								<h5>
+									Fresh Lime Roasted Salmon with Ginger Sauce
+								</h5>
+							</div>
+							<div class="card-details">
+								<div class="card-detail">
+									<i class="fa-solid fa-clock"></i>
+									<span>30 minutes</span>
+								</div>
+								<div class="card-detail">
+									<i class="fa-solid fa-utensils"></i>
+									<span>Fish</span>
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-img">
+								<img
+									src="./imgs/recipe3.png"
+									alt="Strawberry Oatmeal Pancake with Honey Syrup"
+								/>
+								<div class="card-heart">
+									<i class="fa-solid fa-heart"></i>
+								</div>
+							</div>
+							<div class="card-content">
+								<h5>
+									Strawberry Oatmeal Pancake with Honey Syrup
+								</h5>
+							</div>
+							<div class="card-details">
+								<div class="card-detail">
+									<i class="fa-solid fa-clock"></i>
+									<span>30 minutes</span>
+								</div>
+								<div class="card-detail">
+									<i class="fa-solid fa-utensils"></i>
+									<span>Breakfast</span>
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-img">
+								<img
+									src="./imgs/recipe4.png"
+									alt="Fresh and Healthy Mixed Mayonnaise Salad"
+								/>
+								<div class="card-heart">
+									<i class="fa-solid fa-heart"></i>
+								</div>
+							</div>
+							<div class="card-content">
+								<h5>
+									Fresh and Healthy Mixed Mayonnaise Salad
+								</h5>
+							</div>
+							<div class="card-details">
+								<div class="card-detail">
+									<i class="fa-solid fa-clock"></i>
+									<span>30 minutes</span>
+								</div>
+								<div class="card-detail">
+									<i class="fa-solid fa-utensils"></i>
+									<span>Healthy</span>
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-img">
+								<img
+									src="./imgs/recipe6.png"
+									alt="Chicken Meatballs with Cream Cheese"
+								/>
+								<div class="card-heart">
+									<i class="fa-solid fa-heart"></i>
+								</div>
+							</div>
+							<div class="card-content">
+								<h5>Chicken Meatballs with Cream Cheese</h5>
+							</div>
+							<div class="card-details">
+								<div class="card-detail">
+									<i class="fa-solid fa-clock"></i>
+									<span>30 minutes</span>
+								</div>
+								<div class="card-detail">
+									<i class="fa-solid fa-utensils"></i>
+									<span>Meat</span>
+								</div>
+							</div>
+						</div>
+						<div class="add">
+							<div class="add-img">
+								<img src="./imgs/add.png" alt="Add Recipe" />
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-img">
+								<img
+									src="./imgs/recipe7.png"
+									alt="Fruity Pancake with Orange & Blueberry"
+								/>
+								<div class="card-heart">
+									<i class="fa-solid fa-heart"></i>
+								</div>
+							</div>
+							<div class="card-content">
+								<h5>Fruity Pancake with Orange & Blueberry</h5>
+							</div>
+							<div class="card-details">
+								<div class="card-detail">
+									<i class="fa-solid fa-clock"></i>
+									<span>30 minutes</span>
+								</div>
+								<div class="card-detail">
+									<i class="fa-solid fa-utensils"></i>
+									<span>Sweet</span>
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-img">
+								<img
+									src="./imgs/recipe8.png"
+									alt="The Best Easy One Pot Chicken and Rice"
+								/>
+								<div class="card-heart">
+									<i class="fa-solid fa-heart"></i>
+								</div>
+							</div>
+							<div class="card-content">
+								<h5>The Best Easy One Pot Chicken and Rice</h5>
+							</div>
+							<div class="card-details">
+								<div class="card-detail">
+									<i class="fa-solid fa-clock"></i>
+									<span>30 minutes</span>
+								</div>
+								<div class="card-detail">
+									<i class="fa-solid fa-utensils"></i>
+									<span>Snack</span>
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-img">
+								<img
+									src="./imgs/recipe9.png"
+									alt="The Creamiest Creamy Chicken and Bacon Pasta"
+								/>
+								<div class="card-heart">
+									<i class="fa-solid fa-heart"></i>
+								</div>
+							</div>
+							<div class="card-content">
+								<h5>
+									The Creamiest Creamy Chicken and Bacon Pasta
+								</h5>
+							</div>
+							<div class="card-details">
+								<div class="card-detail">
+									<i class="fa-solid fa-clock"></i>
+									<span>30 minutes</span>
+								</div>
+								<div class="card-detail">
+									<i class="fa-solid fa-utensils"></i>
+									<span>Noodles</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<section id="delicious">
+					<div id="delicious-header">
+						<h3>Deliciousness to your inbox</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetuipisicing
+							elit, sed do eiusmod tempor incididunt ut labore et
+							dolore magna aliqut enim ad minim
+						</p>
+					</div>
+					<div id="delicious-content">
+						<div class="input-group">
+							<input
+								type="text"
+								class="form-control"
+								placeholder="Your email address..."
+								aria-label="Recipient's username"
+								aria-describedby="button-addon2"
+							/>
+							<button
+								class="btn btn-outline-secondary"
+								type="button"
+								id="button-addon2"
+							>
+								Subscribe
+							</button>
+						</div>
+					</div>
+					<div class="imgs">
+						<img
+							class="w-50 left delicious-img"
+							src="./imgs/delicious1.png"
+							alt="eat"
+						/>
+						<img
+							class="w-50 right delicious-img"
+							src="./imgs/delicious2.png"
+							alt="salad"
+						/>
+					</div>
+				</section>
+			</div>
+		</main>
+
 	</body>
 </html>
