--- a/index.html
+++ b/index.html
@@ -397,6 +397,36 @@
 				</section>
 			</div>
 		</main>
-
+		<footer>
+			<div class="wrapper">
+				<div id="footer-first">
+					<div>
+						<a href="" id="logo">Foodieland</a>
+						<p>
+							Lorem ipsum dolor sit amet, consectetuipisicing
+							elit,
+						</p>
+					</div>
+					<div id="footer-list">
+						<ul>
+							<li><a href="">Recipes</a></li>
+							<li><a href="">Blog</a></li>
+							<li><a href="">Contact</a></li>
+							<li><a href="">About us</a></li>
+						</ul>
+					</div>
+				</div>
+				<div id="footer-second">
+					<div id="copyright">
+						<p>© 2025 Flowbase. Powered by Elvin</p>
+					</div>
+					<div id="footer-links">
+						<a href=""><i class="fa-brands fa-facebook-f"></i></a>
+						<a href=""><i class="fa-brands fa-twitter"></i></a>
+						<a href=""><i class="fa-brands fa-instagram"></i></a>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
