--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
 			crossorigin="anonymous"
 		/>
-		<title>Foodieland</title>
+		<title>Foodieland.</title>
 	</head>
 	<body>
 		<header>
